--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
             <button class="bg-blue-500 my-2 text-white rounded-md px-3 py-1 hover:bg-blue-500"
                 style="height: 2.5rem;">Next</button>
             <span class="bottom-10 text-sm text-center">Not a Flickr member?<span class="cursor-pointer hover:underline">
-                    Sign up here</span></span>
+                    Sign up here.</span></span>
         </div>
         <div class="flex">
             <a href="#">Help</a>
