--- a/profile.html
+++ b/profile.html
@@ -74,8 +74,7 @@
   </section>
   <footer style="height: 4rem; background-color: black; color: white;">
     <div class="flex justify-evenly">
-        <a href="" >About</a>
-        <a href="">Jobs</a>
+        <a href="Home.html" >About</a>
         <a href="">Blob</a>
         <a href="">Developers</a>
         <a href="">Guidlines</a>
