--- a/Home.html
+++ b/Home.html
@@ -9,41 +9,11 @@
     <script src="https://kit.fontawesome.com/57efc2f9b4.js" crossorigin="anonymous"></script>
 </head>
 <body style="background-color: aliceblue;height: 100%;">
-   <!--
-<header class="text-center " style="position: fixed;width: 100%;z-index: 1;background-color: #0000006f;">
-        <div class="margin-top: 1rem; flex justify-stretch">
-            <div>
-                <img style="height: 70px; margin-left: 2rem;" src="/assests/flickr (2).png" alt="logo">
-            </div>
-            <div>
-                <form style="width: 100px;">
-                    <input style="width: 600px;" type="text" name="" id="">
-                </form>
-            </div>
-            <div class="flex justify-end">
-                <div>
-                    <a href="#">Login</a>
-                </div>
-                <div>
-                    <button>
-                        Signup
-                    </button>
-                </div>
-            </div>
-           
-
-
-
-        </div>
-
-        </div>
-    </header>
-   --> 
 
    <header class="flex justify-around" style="background-color: black; height: 4rem;color: white;">
    
     <div class="flex">
-        <img id="log_icon" src="" alt="">
+        <img  src="assests/flickr.png" alt="" style="height: 4rem;">
         <a style="margin-top: 18px;padding-right: 2rem;padding-left: 2rem;" href="#">View</a>
         <a style="margin-top: 18px;padding-right: 2rem;"href="#">Explore</a>
         <a style="margin-top: 18px;padding-right: 2rem;"href="#">Prints</a>
