--- a/sign.html
+++ b/sign.html
@@ -12,8 +12,7 @@
 
     <header class="bg-black " style="height: 4rem;color: white;">
         <div class="flex justify-start"style="padding-left: 3rem;">
-            <img id="log_icon" src="" alt="">
-            
+            <button onclick="location.href = 'index.html';"><img id="log_icon" src="" alt=""></button>
             
         </div>
       </header>
