--- a/profile.html
+++ b/profile.html
@@ -15,10 +15,10 @@
    
     <div class="flex">
         <img  src="assests/flickr.png" alt="" style="height: 4rem;">
-        <a style="margin-top: 18px;padding-right: 2rem;padding-left: 2rem;" href="#">View</a>
-        <a style="margin-top: 18px;padding-right: 2rem;"href="#">Explore</a>
-        <a style="margin-top: 18px;padding-right: 2rem;"href="#">Prints</a>
-        <a style="margin-top: 18px;padding-right: 2rem;"href="#">Get Pro</a>
+        <a style="margin-top: 24px;padding-right: 2rem;padding-left: 2rem;" href="#">View</a>
+        <a style="margin-top: 24px;padding-right: 2rem;"href="#">Explore</a>
+        <a style="margin-top: 24px;padding-right: 2rem;"href="#">Prints</a>
+        <a style="margin-top: 24px;padding-right: 2rem;"href="#">Get Pro</a>
     </div>
    
         <div class="flex">
@@ -27,8 +27,9 @@
                     placeholder="https://wploadww.flickr.com/u">
           <i class="fa-regular fa-cloud-arrow-up" style="margin-top: 24px;padding-left: 2rem;"></i>
            <i class="fa-solid fa-bell" style="color: #ffffff;margin-left: 15px;margin-top: 24px;padding-right: 2rem;padding-left: 2rem;"></i>
-           <img src="assests/profile.jpg" alt="" style="border-radius: 50%; height: 2rem;margin-top: 15px;">
-     </div>
+           <button onclick="location.href = 'profile.html';"><img src="assests/profile.jpg" alt="profile" style="border-radius: 50%;height: 2rem;">
+           </button>
+        </div>
    
    
   </header>
