profile page ready

--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="output.css">
     <link rel="icon" type="img/png" href="assests/flickr (4).png">
 </head>
-<body style="background-color:  rgb(149, 186, 255);">
+<body style="background-image: url(https://identity.flickr.com/img/033120190455-by-Henry.2edde7a9.jpg);">
 
 
   <header class="bg-black " style="height: 4rem;color: white;">
