--- a/Home.html
+++ b/Home.html
@@ -20,15 +20,15 @@
         <a style="margin-top: 18px;padding-right: 2rem;"href="#">Get Pro</a>
     </div>
    
-        <div class="flex">
-            <input style="padding-right:15rem;height: 2rem; margin-top: 15px;color: black;"
-                    class="border-none rounded-sm outline-none border-2 px-3 my-2" type="text"
-                    placeholder="https://wploadww.flickr.com/u">
-          <i class="fa-regular fa-cloud-arrow-up" style="margin-top: 24px;padding-left: 2rem;"></i>
-           <i class="fa-solid fa-bell" style="color: #ffffff;margin-left: 15px;margin-top: 24px;padding-right: 2rem;padding-left: 2rem;"></i>
-           <img src="assests/profile.jpg" alt="" style="border-radius: 50%; height: 2rem;margin-top: 15px;">
-     </div>
-   
+    <div class="flex">
+        <input style="padding-right:15rem;height: 2rem; margin-top: 15px;color: black;"
+                class="border-none rounded-sm outline-none border-2 px-3 my-2" type="text"
+                placeholder="Photos ,peoples or groups>
+                <i class="fa-solid fa-cloud-arrow-up cursor-pointer" style="margin-top: 24px;padding-left: 1rem;"></i>
+       <i class="fa-solid fa-bell cursor-pointer" style="color: #ffffff;margin-left: 15px;margin-top: 24px;padding-right: 1rem;"></i>
+       <button onclick="location.href = 'profile.html';"><img src="assests/profile.jpg" alt="profile" style="border-radius: 50%;height: 2rem;">
+       </button>
+    </div>
    
   </header>
 
