Html css completed

--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
 <header class="flex justify-around" style="background-color: black; height: 4rem;color: white;">
    
     <div class="flex">
-        <img class="cursor-pointer" onclick="location.href = 'index.html';" src="assests/flickr.png" alt="" style="height: 4rem;">
+        <img class="cursor-pointer" onclick="location.href = 'Home.html';" src="assests/flickr.png" alt="" style="height: 4rem;">
         <a style="margin-top: 24px;padding-right: 2rem;padding-left: 2rem;" href="#">View</a>
         <a style="margin-top: 24px;padding-right: 2rem;"href="#">Explore</a>
         <a style="margin-top: 24px;padding-right: 2rem;"href="#">Prints</a>
