--- a/login.html
+++ b/login.html
@@ -10,50 +10,49 @@
     <link rel="icon" type="img/png" href="assests/flickr (4).png">
 </head>
 
-<body style="background-image: url(https://identity.flickr.com/img/033120190455-by-Henry.2edde7a9.jpg);">
+<body id="login_body">
 
 
-    <header class="bg-black " style="height: 4rem;color: white;">
-        <div class="flex" style="padding-left: 3rem;">
-            <button onclick="location.href = 'index.html';"><img id="log_icon" src="" alt="">
-            </button>
-
+    <header class="bg-black h-16 text-white">
+        <div class="flex pl-12">
+            <button onclick="location.href = 'index.html';"><img id="log_icon" src="" alt="logo"></button>
         </div>
     </header>
-    <section class="grid grid-cols-2 gap-4 place-content-center text-center" style="height: 39.5rem;">
+    <section id="log_section" class="grid grid-cols-2 gap-4 place-content-center text-center">
         <form id="log_box" action="Home.html">
             <img id="log_img" src="" alt="logo">
 
-            <p class="text-center" style="font-size: 20px;">Log in to Flickr</p><br>
+            <p id="log_text" class="text-center"></p><br>
 
-            <input id="log_input" class="outline-blue-500 h-12 rounded-sm px-3 my-2" type="text"
-                placeholder="Email address" style="border-width: 1px; border-color:black; padding-right: 8rem;"
+            <input id="email" class="outline-blue-500 h-12 rounded-sm px-3 my-2" type="text" placeholder="Email address"
                 required><br>
-            <input class="outline-blue-500 h-12 rounded-sm px-3 my-2" type="password" placeholder="Password"
-                style="border-width: 1px; border-color:black; padding-right: 8rem;" required><br>
-            <button id="log_button" class="bg-blue-500 my-2 text-white rounded-sm px-3 py-1 hover:bg-blue-500"
-                style="height: 2.5rem;font-weight: 550;">Next</button><br>
+            <input id="password" class="outline-blue-500 h-12 rounded-sm px-3 my-2" type="password"
+                placeholder="Password" required><br>
+            <button id="next_button"
+                class="bg-blue-500 my-2 text-white rounded-sm px-3 py-1 hover:bg-blue-500">Next</button><br>
 
             <span class="bottom-10 text-sm text-center">Not a Flickr member? <button
-                    onclick="location.href = 'sign.html';" class="cursor-pointer hover:underline">
-                    Sign up here.</button></span>
+                    onclick="location.href = 'sign.html';" class="cursor-pointer hover:underline">Sign up
+                    here.</button></span>
         </form>
-        <div class="text-white flex justify-between" style="margin-top: 4px;">
+        <div class="text-white flex justify-between mt-1">
             <div>
                 <a href="#">English</a>
             </div>
 
             <div>
-                <a style="padding-left: 10px;" href="#">Help</a>
-                <a style="padding-left: 10px;" href="#">Privacy</a>
-                <a style="padding-left: 10px;" href="#">Terms</a>
+                <a class="pl-2" href="#">Help</a>
+                <a class="pl-2" href="#">Privacy</a>
+                <a class="pl-2" href="#">Terms</a>
             </div>
 
 
         </div>
 
     </section>
+
     <script src="script.js"></script>
+
 </body>
 
 </html>
