--- a/sign.html
+++ b/sign.html
@@ -23,8 +23,8 @@
 
     <section class="grid grid-cols-2 gap-4 place-content-center text-center" style="height: 39.5rem;">
 
-        <form id="log_box" action="Home.html">
-            <img id="log_img" src="" alt="logo">
+        <form id="sign_box" action="Home.html">
+            <img id="sign_img" src="" alt="logo">
             <p class="text-center" style="font-size: 20px;">Sign up for Flickr</p>
             <input class="outline-blue-500 h-12 rounded-sm px-3 my-2" type="text" placeholder="First Name"
                 style="border-width: 1px; border-color:black; padding-right: 6rem;" required>
@@ -61,6 +61,7 @@
 
     </section>
     <script src="script.js"></script>
+    
 </body>
 
 </html>
