--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body id="body" class="grid items-stretch">
     <header id="header">
         <div class="flex justify-around">
-            <button id="logo" onClick="window.location.reload();"><img src="" alt="logo"></button>
+            <button id="logo" onClick="window.location.reload();"><img src="assests/flickr.png" alt="logo" style="height: 4rem;"></button>
 
             <input id="input" class="border-none rounded-sm outline-none border-2 px-3 my-2" type="text"
                 placeholder="Photos,peoples,or groups">
