--- a/sign.html
+++ b/sign.html
@@ -15,7 +15,8 @@
 
     <header class="bg-black " style="height: 4rem;color: white;">
         <div class="flex justify-start" style="padding-left: 3rem;">
-            <button onclick="location.href = 'index.html';"><img id="log_icon" src="" alt=""></button>
+            <button onclick="location.href = 'index.html';"><img style="padding-left: 3rem; height:4rem" id="log_icon"
+                src="assests/flickr (1).png" alt="logo"></button>
 
         </div>
     </header>
@@ -24,7 +25,7 @@
     <section class="grid grid-cols-2 gap-4 place-content-center text-center" style="height: 39.5rem;">
 
         <form id="sign_box" action="Home.html">
-            <img id="sign_img" src="" alt="logo">
+            <img id="sign_img" src="assests/flickr (1).png" alt="logo" style="margin-left: auto;margin-right: auto;height: 2rem; width: 2rem;">
             <p class="text-center" style="font-size: 20px;">Sign up for Flickr</p>
             <input class="outline-blue-500 h-12 rounded-sm px-3 my-2" type="text" placeholder="First Name"
                 style="border-width: 1px; border-color:black; padding-right: 6rem;" required>
